--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,8 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --color-blue-base: rgba(15, 82, 186, 1);
+  --background: rgba(249, 249, 249, 1);
 }
 
 @media (prefers-color-scheme: dark) {
